[gd_scene load_steps=11 format=3 uid="uid://bofjp331ba6v3"]

[ext_resource type="Texture2D" uid="uid://o6pq6w6x2mri" path="res://asset/sprites/eagle-attack.png" id="1_cakic"]
[ext_resource type="Script" path="res://level/environment/moving_objects/eagle.gd" id="1_hukuy"]

[sub_resource type="Curve2D" id="Curve2D_hr1jp"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0bppc"]
size = Vector2(28, 12)

[sub_resource type="Animation" id="Animation_jp7wj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gire1"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_ovr2s"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hutjg"]
_data = {
"RESET": SubResource("Animation_jp7wj"),
"attack": SubResource("Animation_gire1"),
"idle": SubResource("Animation_ovr2s")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0dt2"]
size = Vector2(28, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yklep"]
size = Vector2(19, 16)

[node name="Eagle" type="Path2D"]
curve = SubResource("Curve2D_hr1jp")
script = ExtResource("1_hukuy")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotates = false
loop = false

[node name="eagleBody" type="StaticBody2D" parent="PathFollow2D"]

[node name="Sprite2D" type="Sprite2D" parent="PathFollow2D/eagleBody"]
texture = ExtResource("1_cakic")
hframes = 4

[node name="CollisionMain" type="CollisionShape2D" parent="PathFollow2D/eagleBody"]
position = Vector2(-3, 6)
shape = SubResource("RectangleShape2D_0bppc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PathFollow2D/eagleBody"]
libraries = {
"": SubResource("AnimationLibrary_hutjg")
}

[node name="RichTextLabel" type="RichTextLabel" parent="PathFollow2D/eagleBody"]
visible = false
offset_left = -2.0
offset_top = -8.0
offset_right = 38.0
offset_bottom = 32.0
rotation = 0.218545
text = "zzZZ"

[node name="AreaTop" type="Area2D" parent="PathFollow2D/eagleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/eagleBody/AreaTop"]
visible = false
position = Vector2(-3, -9)
shape = SubResource("RectangleShape2D_l0dt2")

[node name="AreaBottom" type="Area2D" parent="PathFollow2D/eagleBody"]
position = Vector2(0, 19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/eagleBody/AreaBottom"]
visible = false
position = Vector2(-3.5, -4)
shape = SubResource("RectangleShape2D_yklep")

[connection signal="body_entered" from="PathFollow2D/eagleBody/AreaTop" to="." method="_on_area_top_body_entered"]
[connection signal="body_exited" from="PathFollow2D/eagleBody/AreaTop" to="." method="_on_area_top_body_exited"]
[connection signal="body_entered" from="PathFollow2D/eagleBody/AreaBottom" to="." method="_on_area_bottom_body_entered"]
[connection signal="body_exited" from="PathFollow2D/eagleBody/AreaBottom" to="." method="_on_area_bottom_body_exited"]
